--- a/examples/google_cloud/bucket_cloud_function/create_import_job/requirements.txt
+++ b/examples/google_cloud/bucket_cloud_function/create_import_job/requirements.txt
@@ -1,2 +1,1 @@
-google-cloud-storage==2.0.0
-requests==2.26.0
+-e git://github.com/goalplan/goalplan_integration.git@create-import-job-cloud-function#egg=goalplan
