--- a/examples/google_cloud/bucket_cloud_function/example_function/config.json
+++ b/examples/google_cloud/bucket_cloud_function/example_function/config.json
@@ -1,7 +1,7 @@
 {
-  "base_url" : "https://stage-api.goalplan.com/data/import/",
+  "base_url" : "https://api.example.com/data/import/",
   "api_token": "******",
   "file_mappings": {
-    "data-upload/phone-data": "e23f7a01-d814-452b-8846-5f8d3f70bb09"
+    "data-upload/phone-data": "a23f7a01-d814-452b-8846-5f8d3f70bb09"
   }
 }
