--- a/examples/google_cloud/bucket_cloud_function/example_function/requirements.txt
+++ b/examples/google_cloud/bucket_cloud_function/example_function/requirements.txt
@@ -1,1 +1,1 @@
--e git://github.com/goalplan/goalplan_integration.git@create-import-job-cloud-function#egg=goalplan
+-e git://github.com/goalplan/goalplan_integration.git@v0.1#egg=goalplan
