AB-14 AB-333 update dependencies and documentation (#3)
* Updating docs and process to fit PDL better

* github actions update + docs

* fixed builder name

* updated requirements

* upgraded google cloud storage

--- a/examples/google_cloud/bucket_cloud_function/example_function/config.json
+++ b/examples/google_cloud/bucket_cloud_function/example_function/config.json
@@ -1,7 +1,11 @@
 {
-  "base_url" : "https://api.example.com/data/import/",
+  "base_url": "https://api.example.com/data/import/",
   "api_token": "******",
-  "file_mappings": {
-    "data-upload/phone-data": "a23f7a01-d814-452b-8846-5f8d3f70bb09"
-  }
+  "file_mappings": [
+    [
+      "drop-folder/match[^/]+.csv",
+      "d02e4c2d-55ef-4074-8029-ca1866246a14",
+      null
+    ]
+  ]
 }
