--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -8,8 +8,8 @@ on:
       - main
 
 jobs:
-  build:
-    runs-on: ubuntu-18.04
+  test:
+    runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v2
       - name: Install Python 3
